--- a/HTMLInstagram/index.html
+++ b/HTMLInstagram/index.html
@@ -14,46 +14,43 @@
 <body>
 
   <div id="main">
-    <!-- <h1>You're ready to use Parse!</h1> -->
     <img src="/android/gallery_instagram-logo.png" alt="Instagram Logo" height="200px" width="auto">
-    <form action="user.html">
-      <br>
-      <input type="text" name="userid" value="Enter your username" required autofocus>
-      <br>
-      <br>
-      <input type="password" name="password" required>
-      <br><br>
-      <input type="submit" value="Submit">
-      <input type="submit" formaction="newuser.asp" value="Create new user">
-      </form>
+    <form class="login-form" method="post" onsubmit="tryLogin(this); event.preventDefault();">
+      <h3 class="form-title">Login to your account</h3>
+      <div class="alert alert-danger display-hide">
+        <button class="close" data-close="alert"></button>
+        <span>
+          Enter any username and password.
+        </span>
+      </div>
+      <div class="form-group">
+        <!--ie8, ie9 does not support html5 placeholder, so we just show field title for that-->
+        <label class="control-label visible-ie8 visible-ie9">Username</label>
+        <div class="input-icon">
+          <i class="fa fa-user"></i>
+          <input class="form-control placeholder-no-fix" type="text" autocomplete="off" placeholder="Username" name="username" id="username"/>
+        </div>
+      </div>
+      <div class="form-group">
+        <label class="control-label visible-ie8 visible-ie9">Password</label>
+        <div class="input-icon">
+          <i class="fa fa-lock"></i>
+          <input class="form-control placeholder-no-fix" type="password" autocomplete="off" placeholder="Password" name="password" id="password"/>
+        </div>
+      </div>
+      <div class="form-actions">
+        <input type="submit" value="Submit"><br>
+        <input type="submit" formaction="demo_admin.asp" value="Submit as admin">
 
-      <!--
-    <p>Read the documentation and start building your JavaScript app:</p>
+      </div>
+    </form>
 
-    <ul>
-      <li><a href="https://www.parse.com/docs/js_guide">Parse JavaScript Guide</a></li>
-      <li><a href="https://www.parse.com/docs/js">Parse JavaScript API Documentation</a></li>
-    </ul>
-
-    <div style="display:none" class="error">
-      Looks like there was a problem saving the test object. Make sure you've set your application ID and javascript key correctly in the call to <code>Parse.initialize</code> in this file.
-    </div>
-
-    <div style="display:none" class="success">
-      <p>We've also just created your first object using the following code:</p>
-
-        <code>
-          var TestObject = Parse.Object.extend("TestObject");<br/>
-          var testObject = new TestObject();<br/>
-          testObject.save({foo: "bar"});
-        </code>
-    </div>
-  </div> -->
-
-  <script type="text/javascript">
+    <script type="text/javascript">
     Parse.initialize("instagram5208", "instagram5208oijopiajaoijwogeij934oin83hnvASC");
     Parse.serverURL = 'https://frozen-sierra-62859.herokuapp.com/parse/'
+    </script>
 
+    <script type="text/javascript">
     // var TestObject = Parse.Object.extend("TestObject");
     // var testObject = new TestObject();
     //   testObject.save({foo: "bar"}, {
@@ -64,18 +61,33 @@
     //     $(".error").show();
     //   }
     // });
-  </script>
 
-  <script type="text/javascript">
-  Parse.User.logIn("joao", "joao", {
-    success: function(user) {
-      // Do stuff after successful login.
-    },
-    error: function(user, error) {
-      // The login failed. Check error to see why.
+    function tryLogin(form) {
+
+      var username = form.username.value;
+      sessionStorage.setItem('username', username);
+      var password = form.password.value;
+      sessionStorage.setItem('password', password);
+
+
+      console.log("Username: " + username + " Password: " + password);
+      Parse.User.logIn(username, password, {
+        success: function(user) {
+          window.location.href="activity_user_feed.html";
+          //self.undelegateEvents();
+          //delete self;
+          alert("Sucess");
+          return true;
+        },
+        error: function(user, error) {
+          window.location.href="index.html";
+          alert("Error: " + error.code + " " + error.message + username + password);
+          return false;
+        }
+      });
+
     }
-  });
-  </script>
-</body>
+    </script>
+  </body>
 
-</html>
+  </html>
