testing git atom plugin

--- a/HTMLInstagram/activity_user_feed.html
+++ b/HTMLInstagram/activity_user_feed.html
@@ -48,7 +48,7 @@ query.find({
       myObjectIds[i] = object.id;
       //alert(url + object.id + createdAt + username + image);
       //alert(object.id + ' - ' + createdAt + ' - ' + object.get(image));
-      //alert(myObjectIds); //working
+      alert(myObjectIds); //working
     }
   },
   error: function(error) {
