feed without picture, user list ok

--- a/HTMLInstagram/activity_user_list.html
+++ b/HTMLInstagram/activity_user_list.html
@@ -42,7 +42,7 @@ query.find({
       var object = results[i];
       userArray[i] = (object.get("username"));
       myObjectIds[i] = object.id;
-      //alert(userArray[i]); //working
+      alert(userArray[i]); //working
     }
     text = "<p>";
     for (i = 0; i < myObjectIds.length; i++) {
