--- a/HTMLInstagram/activity_user_feed.html
+++ b/HTMLInstagram/activity_user_feed.html
@@ -12,7 +12,7 @@
 <body>
   <h1>Testing</h1>
   <button onclick="show_image('http://frozen-sierra-62859.herokuapp.com/parse/files/instagram5208/4a6783037e5649c91a3e45063fb9e99c_image.png', 276, 110,'Google Logo');">Add Google Logo</button>
-
+  <input type=button onClick="location.href='activity_user_list.html'" value='click here'>
 </body>
 
 <script type="text/javascript">
