--- a/HTMLInstagram/activity_user_list.html
+++ b/HTMLInstagram/activity_user_list.html
@@ -12,54 +12,56 @@
 
 <body>
   <h1>Testing</h1>
-  <p id="demo"></p>
+  <p id="demo">
+    <a href="index.html"></a>
+  </p>
+
+  <div>
+    <script type="text/javascript">
+    Parse.initialize("instagram5208", "instagram5208oijopiajaoijwogeij934oin83hnvASC");
+    Parse.serverURL = 'https://frozen-sierra-62859.herokuapp.com/parse/'
+    </script>
 
 
-<script type="text/javascript">
-Parse.initialize("instagram5208", "instagram5208oijopiajaoijwogeij934oin83hnvASC");
-Parse.serverURL = 'https://frozen-sierra-62859.herokuapp.com/parse/'
-</script>
+    <script type="text/javascript">
+    var user = sessionStorage.getItem('username', user);
+    var password = sessionStorage.getItem('password', password);
+    document.title = user;
 
+    var myObjectIds = Array();
+    var userArray= Array();
 
-<script type="text/javascript">
-var user = sessionStorage.getItem('username', user);
-var password = sessionStorage.getItem('password', password);
-document.title = user;
-
-var myObjectIds = Array();
-var userArray= Array();
-
-// Assume Parse.Object myPost was previously created.
-var User = Parse.Object.extend("User");
-var query = new Parse.Query(User);
-query.notEqualTo("user", "joao");
-query.ascending("username");
-query.find({
-  success: function(results) {
-    //alert("Successfully retrieved " + results.length + " users.");
-    // Do something with the returned Parse.Object values
-    for (var i = 0; i < results.length; i++) {
-      var object = results[i];
-      userArray[i] = (object.get("username"));
-      myObjectIds[i] = object.id;
-      alert(userArray[i]); //working
-    }
-    text = "<p>";
-    for (i = 0; i < myObjectIds.length; i++) {
-        text += "<p>" + userArray[i] + "</p>";
-    }
-    text += "</p>";
-    document.getElementById("demo").innerHTML = text;
-  },
-  error: function(error) {
-    alert("Error: " + error.code + " " + error.message);
-  }
-});
+    // Assume Parse.Object myPost was previously created.
+    var User = Parse.Object.extend("User");
+    var query = new Parse.Query(User);
+    query.notEqualTo("user", "joao");
+    query.ascending("username");
+    query.find({
+      success: function(results) {
+        //alert("Successfully retrieved " + results.length + " users.");
+        // Do something with the returned Parse.Object values
+        for (var i = 0; i < results.length; i++) {
+          var object = results[i];
+          userArray[i] = (object.get("username"));
+          myObjectIds[i] = object.id;
+          //alert(userArray[i]); //working
+        }
+        text = "<div>";
+        for (i = 0; i < myObjectIds.length; i++) {
+          text += "<button id=clickable>" + userArray[i] + "</button>";
+        }
+        text += "</div>";
+        document.getElementById("demo").innerHTML = text;
+      },
+      error: function(error) {
+        alert("Error: " + error.code + " " + error.message);
+      }
+    });
 
 
 
-</script>
-
+    </script>
+  </div>
 </body>
 
 </html>
