--- a/HTMLInstagram/activity_user_list.html
+++ b/HTMLInstagram/activity_user_list.html
@@ -48,7 +48,7 @@
         }
         text = "<div>";
         for (i = 0; i < myObjectIds.length; i++) {
-          text += "<button id=clickable>" + userArray[i] + "</button>";
+          text += "<button type=button id=clickable>" + userArray[i] + "</button>";
         }
         text += "</div>";
         document.getElementById("demo").innerHTML = text;
