--- a/HTMLInstagram/index.html
+++ b/HTMLInstagram/index.html
@@ -9,6 +9,8 @@
 <link rel="stylesheet" href="css/styles.css">
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 <script type="text/javascript" src="http://www.parsecdn.com/js/parse-latest.js"></script>
+<script type="text/javascript" src="script.js"></script>
+
 </head>
 
 <body>
@@ -42,53 +44,6 @@
     </div>
   </form>
 </div>
-
-<script type="text/javascript">
-Parse.initialize("instagram5208", "instagram5208oijopiajaoijwogeij934oin83hnvASC");
-Parse.serverURL = 'https://frozen-sierra-62859.herokuapp.com/parse/'
-</script>
-
-<script type="text/javascript">
-
-function signUp(form) {
-  var username = form.username.value;
-  sessionStorage.setItem('username', username);
-  var password = form.password.value;
-  sessionStorage.setItem('password', password);
-
-  var user = new Parse.User();
-
-  user.set("username", username);    // in my app, email==username
-  user.set("password", password);
-
-  return user.signUp(null, {
-      success: function(user) {
-      form.submit();
-      alert("Account Successfully Created!");
-      }, error: function(user,error){
-          alert("Account Not Created!");
-      }
-  });
-}
-
-function logIn(form) {
-  var username = form.username.value;
-  sessionStorage.setItem('username', username);
-  var password = form.password.value;
-  sessionStorage.setItem('password', password);
-  return Parse.User.logIn(username, password);
-}
-
-function tryLogin(form) {
-  return logIn(form).then(function(user) {
-    window.location.href="activity_user_feed.html";
-
-  }, function(user, error) {
-    return signUp(form);
-  });
-}
-
-</script>
 </body>
 
 </html>
