Move code to script.js completed :)

--- a/HTMLInstagram/activity_user_feed.html
+++ b/HTMLInstagram/activity_user_feed.html
@@ -25,102 +25,11 @@
 </form>
 
 <script type='text/javascript'>
-initializeParse();
-
-$(function() {
-  var file;
-
-  // Set an event listener on the Choose File field.
-  $('#fileselect').bind('change', function(e) {
-    var files = e.target.files || e.dataTransfer.files;
-    // Our file var now holds the selected file
-    file = files[0];
-  });
-
-  // This function is called when the user clicks on Upload to Parse. It will create the REST API request to upload this image to Parse.
-  $('#uploadbutton').click(function() {
-    var serverUrl = 'https://frozen-sierra-62859.herokuapp.com/parse/files/' + file.name;
-
-    $.ajax({
-      type: 'POST',
-      beforeSend: function(request) {
-        request.setRequestHeader('X-Parse-Application-Id', 'instagram5208');
-        request.setRequestHeader('X-Parse-REST-API-Key', 'instagram5208oijopiajaoijwogeij934oin83hnvASC');
-        request.setRequestHeader('Content-Type', file.type);
-      },
-      url: serverUrl,
-      data: file,
-      processData: false,
-      contentType: false,
-      success: function(data) {
-        if (window.confirm('File available at: ' + data.url)){
-          window.open(data.url);
-          var Image = Parse.Object.extend("Image");
-          var object = new Image();
-
-          object.set('username', username);
-          object.set('url', data.url)
-          object.set({image: {"name": data.name,"url": data.url,"__type": "File"}});
-          object.save();
-          console.log('file saved!');
-
-
-        }else{
-          document.getElementById('resultURL').value = data.url;
-        }
-        document.getElementById('resultURL').value = data.url;
-      },
-      error: function(data) {
-        var obj = jQuery.parseJSON(data);
-        alert(obj.error);
-        window.alert('ERROR');
-      }
-    });
-  });
-});
+uploadImages();
+showImages();
 </script>
 
 <script type="text/javascript">
-var username = sessionStorage.getItem('username', username);
-var password = sessionStorage.getItem('password', password);
-document.title = username;
-//alert (username);
-//alert (password);
-
-var Image = Parse.Object.extend("Image");
-var query = new Parse.Query(Image);
-
-query.equalTo("username", username);
-query.descending("createdAt");
-
-query.find({
-  success: function(results) {
-    //alert("Successfully retrieved " + results.length + " images.");
-    // Do something with the returned Parse.Object values
-    for (var i = 0; i < results.length; i++) {
-      var object = results[i];
-      // var myImage = object.id;
-      //var url = (object.get("image").url);
-      var createdAt = (object.get("createdAt"));
-      var image = object.get("image");
-      var imageUrl = image.url();  // now you have the file URL
-      //alert(imageUrl + object.id + createdAt + username + image);
-      //alert(object.id + ' - ' + createdAt + ' - ' + object.get(image));
-      // alert(imageURLArray[i]); //working
-
-      document.write("<li><img src='" + imageUrl +"'/></li>");
-
-    }
-
-  },
-  error: function(error) {
-    alert("Error: " + error.code + " " + error.message);
-  }
-});
-
-
-
-
 
 function show_image(src, width, height, alt) {
   var img = document.createElement("img");
