--- a/HTMLInstagram/activity_user_feed.html
+++ b/HTMLInstagram/activity_user_feed.html
@@ -12,7 +12,7 @@
 
 <body>
   <h1>Testing</h1>
-  <button onclick="show_image('http://frozen-sierra-62859.herokuapp.com/parse/files/instagram5208/4a6783037e5649c91a3e45063fb9e99c_image.png', 276, 110,'Google Logo');">Add Google Logo</button>
+  <!-- <button onclick="show_image('http://frozen-sierra-62859.herokuapp.com/parse/files/instagram5208/4a6783037e5649c91a3e45063fb9e99c_image.png', 276, 110,'Google Logo');">Add Google Logo</button> -->
   <input type=button onClick="location.href='activity_user_list.html'" value='See User List'>
 </body>
 
@@ -27,21 +27,17 @@
 <script type='text/javascript'>
 uploadImages();
 showImages();
-</script>
 
-<script type="text/javascript">
-
-function show_image(src, width, height, alt) {
-  var img = document.createElement("img");
-  img.src = src;
-  img.width = width;
-  img.height = height;
-  img.alt = alt;
-
-  // This next line will just add it to the <body> tag
-  document.body.appendChild(img);
+// function show_image(src, width, height, alt) {
+//   var img = document.createElement("img");
+//   img.src = src;
+//   img.width = width;
+//   img.height = height;
+//   img.alt = alt;
+//
+//   // This next line will just add it to the <body> tag
+//   document.body.appendChild(img);
 }
-
 </script>
 
 </html>
