--- a/HTMLInstagram/activity_user_list.html
+++ b/HTMLInstagram/activity_user_list.html
@@ -16,12 +16,10 @@
   <p id="demo">
     <a href="index.html"></a>
   </p>
-
-  <div>
     <script type="text/javascript">
     showUserList();
     </script>
-  </div>
+    <div id="images"></div>
 </body>
 
 </html>
