Correct image size, improve upload box. Add logout

--- a/HTMLInstagram/activity_user_feed.html
+++ b/HTMLInstagram/activity_user_feed.html
@@ -13,13 +13,13 @@
 <body>
   <div>
     <h1>Testing</h1>
-    <!-- <button onclick="show_image('http://frozen-sierra-62859.herokuapp.com/parse/files/instagram5208/4a6783037e5649c91a3e45063fb9e99c_image.png', 276, 110,'Google Logo');">Add Google Logo</button> -->
     <input type=button onClick="location.href='activity_user_list.html'" value='See User List'>
+    <input type=button onClick="location.href='index.html'" value='Logout'>
     <form id='fileupload' name='fileupload' enctype='multipart/form-data' method='post'>
       <fieldset>
         <input type='file' name='fileselect' id='fileselect'></input>
-        <input id='uploadbutton' type='button' value='Upload to Parse'/></br></br>
-        File URL <input type='text' id='resultURL' size='155'></input>
+        <input id='uploadbutton' type='button' value='Upload'/></br></br>
+        <!-- File URL <input type='text' id='resultURL'></input> -->
       </fieldset>
     </form>
   </div>
