--- a/HTMLInstagram/activity_user_list.html
+++ b/HTMLInstagram/activity_user_list.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="description" content="My Parse App">
   <meta name="viewport" content="width=device-width">
-  <link rel="stylesheet" href="css/reset.css">
+  <!-- <link rel="stylesheet" href="css/reset.css"> -->
   <link rel="stylesheet" href="css/styles.css">
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
   <script type="text/javascript" src="http://www.parsecdn.com/js/parse-latest.js"></script>
@@ -13,9 +13,9 @@
 
 <body>
   <h1>Testing</h1>
-  <p id="demo">
-    <a href="index.html"></a>
-  </p>
+  <input type=button onClick="location.href='activity_user_feed.html'" value='My feed'>
+
+  <p id="demo"><a href="index.html"></a></p>
     <script type="text/javascript">
     showUserList();
     </script>
